# LLC

./: CMakeLists.txt  README.md
src/: LineLengthCounter.cpp  LineLengthCounter.hpp  main.cpp  test.cpp  utils.hpp
tests/: generate_text_file.cpp
